Removed depricated keys from '.travis.yml' file.
Removed 'sudo' keyword as it is no longer required in travis CI yml file.
Renamed 'bucket_name' to 'bucket' as suggested by Travis CI build time warning.
P.S. - The previous 'aceess_key' change/commit was successfull in communicating with the AWS Elastic BeanStalk.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-# Docker may require root permission to run some steps hence sudo:required is added
-sudo: required
-
 # Defining docker service for Travis CI
 services:
   - docker
@@ -18,7 +15,7 @@ deploy:
   region: "ap-south-1"
   app: "reactapp-docker-aws-integration"
   env: "ReactappDockerAwsIntegration-env"
-  bucket_name: "elasticbeanstalk-ap-south-1-533962485714"
+  bucket: "elasticbeanstalk-ap-south-1-533962485714"
   bucket_path: "reactapp-docker-aws-integration"
   on:
     branch: master
